# nehz-web

./: compose.yml  docker-compose.yml
backend/: pyproject.toml
frontend/: package.json
frontend/src/app/: page.tsx
frontend/src/components/: ClientDomainContent.tsx  DomainContent.tsx  title.tsx
frontend/src/hooks/: useDomainConfig.ts
frontend/src/lib/: domain-config.ts
